--- a/Kandidatnummer_30_mappeoppgave_2_SOK_2030.tex
+++ b/Kandidatnummer_30_mappeoppgave_2_SOK_2030.tex
@@ -674,6 +674,8 @@ er kvantum ganget med 1000 slik at det blir direkte profitt):
 Dette forteller oss at profitten etter fusjon for Graff Brygghus blir
 429.000 kr og for de fusjonerte bedriftene blir profitten på 312.250 kr.
 
+\clearpage
+
 \subsection{Fusjonsparadokset}\label{fusjonsparadokset}
 
 \begin{wrapfigure}{r}{0.5\textwidth}
@@ -687,7 +689,7 @@ Dette forteller oss at profitten etter fusjon for Graff Brygghus blir
   \includegraphics[width=0.5\textwidth]{dokumentobjekter/figurer/stackelberg_mack_graff.png}
   \captionof{figure}{Stackelberg modell etter fusjon}
   \label{fig:stackelberg_etter_fusjon}
-  \vspace{-1cm}
+  \vspace{-2.5cm}
 \end{wrapfigure}
 
 Fusjonsparadokset er enkelt forklart ved at etterspørselen etter
@@ -1397,7 +1399,7 @@ $\displaystyle 95.02$
 \begin{Shaded}
 \begin{Highlighting}[]
 \CommentTok{\# Lager pai som viser hvor stor andel av markedet hver bedrift har ved bruk av stackelbergmodellen etter fusjonering}
-\NormalTok{labels }\OperatorTok{=}\NormalTok{ [}\StringTok{\textquotesingle{}Mack Mikrobrygg 13\textquotesingle{}}\NormalTok{, }\StringTok{\textquotesingle{}Graff Brygghus\textquotesingle{}}\NormalTok{]}
+\NormalTok{labels }\OperatorTok{=}\NormalTok{ [}\StringTok{\textquotesingle{}Fusjonert bedrift\textquotesingle{}}\NormalTok{, }\StringTok{\textquotesingle{}Graff Brygghus\textquotesingle{}}\NormalTok{]}
 \NormalTok{sizes }\OperatorTok{=}\NormalTok{ [Q1\_sol,Q2\_sol2]}
 \NormalTok{colors }\OperatorTok{=}\NormalTok{ [}\StringTok{\textquotesingle{}\#A42820\textquotesingle{}}\NormalTok{, }\StringTok{\textquotesingle{}\#5F5647\textquotesingle{}}\NormalTok{]}
 \NormalTok{explode }\OperatorTok{=}\NormalTok{ (}\FloatTok{0.1}\NormalTok{, }\DecValTok{0}\NormalTok{)  }\CommentTok{\# explode 1st slice}
